--- a/blogpost.html
+++ b/blogpost.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogPost</title>
-    <link rel="stylesheet" href="./blogpost.html">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog</h1>  
-    <p>Este va a hacer una publicacion del un blog</p>
+    <header class="header">
+        <img class="header__img--logo" src="./#" alt="Logo del blog"/>
+        <nav class="header-nav">
+            <ul>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Proyects</a></li>
+                <li><a href="#">Post</a></li>
+            </ul>
+        </nav>
+        <a href="#"><button class="header__button--contact">Contact</button></a>
+    </header>
 </body>
 </html>
