Terminando el footer del blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -61,5 +61,25 @@
         </section>
         
     </main>
+    <footer class="footer">
+        <img class="footer__img--logo" src="https://cdn.worldvectorlogo.com/logos/slack.svg" alt="Logo del footer">
+        <nav class="footer-nav-links">
+            <h4 class="footer__title">Links</h4>
+            <ul>
+                <li class="footer-nav__list-item"><a href="#">Services</a></li>
+                <li class="footer-nav__list-item"><a href="#">Projects</a></li>
+                <li class="footer-nav__list-item"><a href="#">About me</a></li>
+                <li class="footer-nav__list-item"><a href="#">Post</a></li>
+            </ul>
+        </nav>
+        <nav class="footer-contact">
+            <h4 class="footer__title">Contact me</h4>
+            <ul>
+                <li>Correo: correo_random@correito.com</li>
+                <li>Num: +54 27374967 (Argentina)</li>
+                <li>Dirección: A la vuelta de tu casa</li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
